--- a/internship.html
+++ b/internship.html
@@ -41,12 +41,32 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://www.qreer.com/jobs/view/12119/software-summer-intern-2019'>Software Summer Intern 2019 Job in Wilton - CT, United States</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-31</p>
+<hr/>
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/5g-small-cell-sofware-intern-rfsw-36969'>5G & Small Cell Sofware Intern - RFSW - Nokia Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://aluperf.referrals.selectminds.com/jobs/bell-labs-summer-intern-network-state-36970'>Bell Labs Summer Intern - Network State - Nokia Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oKPpbfwT'>The Climate Corporation Careers - Intern: Data Analyst (Summer 2020)</a></h5> 
+<p><span class="badge badge-light">San Francisco, California  Seattle, Washington</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/the-climate-corporation/job/oUCpbfwQ'>The Climate Corporation Careers - Intern: Communications (Summer 2020)</a></h5> 
+<p><span class="badge badge-light">St. Louis, Missouri</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/shiftdigital/job/o9J9afwV'>Shift Digital Careers - eMystery Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/graduate-intern-immunochemistry-4902'>Graduate Intern - Immunochemistry - PPD Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/graduate-intern-immunochemistry-4902'>Graduate Intern - Immunochemistry - PPD Careers</a></h5> 
+<p><span class="badge badge-light">Virginia, United States  Richmond, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/rpsgroup/ce36389a-7d6b-4969-b31e-32f1e468ddc8'>RPS North America - Intern - Associate Engineer - Water</a></h5> 
@@ -143,11 +163,11 @@
 <p><span class="badge badge-light">Singapore Singapore Malaysia Thailand</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698545130-pim-internship'>Traveloka PIM Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999698545130-pim-internship'>Traveloka PIM Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Thailand  Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ajg.referrals.selectminds.com/jobs/corporate-intern-20166'>Corporate Intern - Gallagher Careers</a></h5> 
+<h5><a href='https://ajg.referrals.selectminds.com/jobs/corporate-intern-20166'>Corporate Intern - Gallagher Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -209,7 +229,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ocK89fwX&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=ni3gpMwh'>Palo Alto Networks Careers - Intern - Software Engineer in Test, Performance</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=ocK89fwX&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=ni3gpMwh'>Palo Alto Networks Careers - Intern - Software Engineer in Test, Performance</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -327,7 +347,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://onedot.join.com/jobs/462868-web-developer-intern'>Job @ Onedot (Schlieren): Web Developer Intern | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://onedot.join.com/jobs/462868-web-developer-intern'>Job @ Onedot (Schlieren): Web Developer Intern | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -367,13 +387,13 @@
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://21buttons.recruitee.com/o/creative-designer-internship'>
+<h5><a href='https://21buttons.recruitee.com/o/creative-designer-internship'>
       Creative Designer- Internship - 21 Buttons
     </a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vimpelcom/23ef62fb-b905-4c01-b7c0-d3921d5a9c83'>VEON - Commercial Experience Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vimpelcom/23ef62fb-b905-4c01-b7c0-d3921d5a9c83'>VEON - Commercial Experience Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -443,26 +463,6 @@
 <hr/>
 <h5><a href='https://marketplacedistri.join.com/jobs/465147-internship-content-marketeer-eng-in-lucca-tuscany-fast-growing-startup'>Job @ marketplacedistri (Lucca): Internship: Conte... | JOIN</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://tetratech.referrals.selectminds.com/jobs/intern-%E2%80%93-water-resources-planner-15782'>Intern ? Water Resources Planner - Tetra Tech Careers</a></h5> 
-<p><span class="badge badge-light">St. Paul, Minnesota United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.crelate.com/portal/trevacorporation/job/trns2egh04d-510330'>Administrator/Recruiter Intern (unpaid)  | Treva Corporation</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698522137-internship-sdet-engineering-sf'>Optimizely Internship - SDET Engineering - SF | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA, USA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698521909-internship-software-engineer-sf'>Optimizely Internship - Software Engineer - SF | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">San Francisco, CA, USA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698522202-internship-software-engineer-austin'>Optimizely Internship - Software Engineer - Austin | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Austin Austin  Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
